# app

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  docker-compose.test.yml  docker-compose.yml  spec.yaml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  coverage.yml  docker.yml
configuration/: base.yaml
migrations/: 20220615170938_create_subscriptions_table.sql
scripts/: init.sh
src/: configuration.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
